fixed all searchbar alignment

--- a/Profile page/Profile.css
+++ b/Profile page/Profile.css
@@ -19,7 +19,13 @@
 }
 
 html {
+  height: 100%;
   scroll-behavior: smooth;
+}
+
+strong {
+  font-weight: bolder;
+  font-size: 1.1rem;
 }
 
 body {
@@ -27,6 +33,8 @@ body {
   font-family: "Helvetica Neue", Arial, sans-serif;
   background: var(--bg-color);
   color: #e6e6e6;
+
+  min-height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -75,7 +83,7 @@ body {
   color: black;
 }
 
-
+/* new searchbar css */
 
 .searchbar {
   --padding: 7px;
@@ -87,17 +95,38 @@ body {
   caret-color: white;
 }
 
-.searchbar form input{
-  padding: 7px 10px;
-  outline: none;
-  border: none;
-  font-size: 18px;
-  width: 350px;
-  background: transparent;
+.searchbar form {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.searchbar .search-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  font-size: 24px;
   color: rgba(255, 255, 255, 0.5);
 }
 
-ul{
+.searchbar input.search-input {
+  flex: 1;
+  height: 100%;
+  padding: 0 10px;
+  border: none;
+  outline: none;
+  background: transparent;
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.searchbar input.search-input::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+  vertical-align: middle;
+}
+
+ul {
   width: 100%;
   max-height: 350px;
   overflow-y: auto;
@@ -106,7 +135,7 @@ ul{
   border-radius: 10px;
 }
 
-ul li{
+ul li {
   list-style: none;
   border: 1px solid #e3e3e3;
   border-top: unset;
@@ -114,7 +143,7 @@ ul li{
   border-right: unset;
 }
 
-ul li button{
+ul li button {
   border: none;
   outline: none;
   background: transparent;
@@ -131,13 +160,10 @@ ul li button{
   background-color: var(--blue-color);
 }
 
-ul li button:hover{
+ul li button:hover {
   background: #4e4e4e;
   color: white;
 }
-
-
-
 
 .header-right .home-icon {
   font-size: 1.8rem;
@@ -265,8 +291,6 @@ ul li button:hover{
   transform: scale(1.1);
 }
 
-
-
 .poster-section {
   display: flex;
   align-items: flex-start;
@@ -383,7 +407,7 @@ ul li button:hover{
     flex-wrap: wrap; */
     gap: 35px;
     width: 100%;
-  } 
+  }
 }
 
 @media screen and (max-width: 1024px) {
