--- a/content page/content.css
+++ b/content page/content.css
@@ -87,41 +87,6 @@ body {
   color: black;
 }
 
-/* old search bar css */
-
-/* .searchbar {
-  --padding: 14px;
-
-  width: max-content;
-  display: flex;
-  align-items: center;
-  padding: var(--padding);
-  border-radius: 28px;
-  background: rgba(0, 0, 0, 0.4);
-  width: 550px;
-  height: 50px;
-  width: max-content;
-}
-
-.searchbar a:hover {
-  background: rgba(72, 72, 72, 0.4);
-}
-
-.search-input {
-  font-size: 1rem;
-  color: rgb(255, 255, 255);
-  margin-left: var(--padding);
-  outline: none;
-  border: none;
-  background: transparent;
-  width: 550px;
-}
-
-.search-input::placeholder,
-.search-icon {
-  color: rgba(255, 255, 255, 0.5);
-} */
-
 /* new searchbar css */
 
 .searchbar {
@@ -968,5 +933,17 @@ input {
 
   .film-info {
     margin-bottom: 10px;
+  }
+
+  .searchbar {
+    margin-top: 10px;
+    align-self: flex-start;
+    width: 350px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 14px;
+    border-radius: 28px;
+    background: rgba(0, 0, 0, 0.4);
   }
 }
